--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,9 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Computing Home Page</title>
 </head>
 <body>
 
 </body>
 </html>
+
+<!-- HEADER START -->
+<header>
+    <img src="assets/images/csdmlogo.png" alt="School of Computing logo">
+    <!-- NAVIGATION START -->
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Staff</a></li>
+            <li><a href="#">Research</a></li>
+            <li><a href="#">Study Information</a></li>
+            <li><a href="#">Industry</a></li>
+            </ul>
+        </nav>
+    <!-- NAVIGATION END -->
+    </header>
+<!-- HEADER END -->
+
+<img src="assets/images/banner.png" alt="Sir Ian Wood Bilding Atrim">
+
+<!-- MAIN START -->
+<main>
+    <!-- MAIN SECTION  START -->
+    <section>
+
+
+    </section>
+    <!-- MAIN SECTION END-->
+
+    <!-- SIDEBAR START -->
+    <aside>
+
+
+    </aside>
+    <!-- SIDEBAR END -->
+</main>
+
+<!-- MAIN SECTION END-->
+
+
+
+<!-- MAIN SECTION START-->
+<section>
+    <h2>Welcome to The School Computing Science Digital Media</h2>
+    <img src="assets/images/Chrisina Jayne.jpg" alt="Chrisian Jayne">
+    <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum coDonec venengue semper. Pellentesque magna justo, semper sollicitudin enim a, eleifend varius tellus. Integer suscipit vestibulum nisi, vel finibus sem dictum vel. Cras quis purus scelerisque, porta ex sollicitudin, sodales lorem. Morbi malesuada risus urna, sed accumsan eros convallis et. Nam pretium eget arcu quis cursus. Aliquam blandit est felis, non rutrum elit molestie ut. Sed sit amet est sapien. Donec non mi euismod, ornare nisi eu, consequat lorem. Donec elementum ultrices laoreet. Sed vel lobortis metus, facilisis euismod justo. Mauris hendrerit ex vitae augue convallis venenatis. Ut vitae ultricies elit, vitae mollis mi.
+
+        Integer at nisi ac erat lobortis tristique nec ut tortor. Nunc efficitur, justo nec consequat fermentum, magna dui sodales massa, finibus eleifend erat mi eu felis. Praesent vitae metus vel tellus eleifend vulputate. Donec varius, mauris nec tempor convallis, tortor lorem vulputate nisl, non bibendum ipsum felis vitae velit. Mauris venenatis urna vel euismod ullamcorper. In hac habitasse platea dictumst. Donec lorem sem, interdum at ligula id, dignissim faucibus metus. Ut libero felis, egestas ut porttitor lobortis, tincidunt eget sapien. Phasellus eget pellentesque nunc. Fusce quam felis, mollis molestie nisi gravida, convallis scelerisque nibh. Aenean scelerisque, felis dignissim ornare varius, sapien tellus pulvinar ante, a maximus dolor nisl sed ipsum.
+
+        In porttitor est non egestas luctus. Vestibulum vulputate rutrum nunc, ac semper est rhoncus eget. Curabitur eros felis, mollis id orci id, hendrerit condimentum arcu. Donec molestie tortor sit amet mattis bibendum. Donec vel risus eu orci dapibus interdum sit amet nec metus. Phasellus nec nunc id velit egestas pellentesque at ut quam. Pellentesque dictum ligula ut lobortis tempus. Vivamus nec nulla ligula. Cras dapibus enim lorem, eu scelerisque magna vestibulum nec. Vivamus semper massa ut ornare facilisis. Donec auctor blandit ultrices. In pulvinar ut orci id bibendum. Pellentesque ipsum mauris, finibus quis varius sed, aliquam ac velit. Integer ornare tortor placerat consectetur sodales.
+
+        Proin sed elit sit amet nibh efficitur fringilla. In sodales arcu eget tellus convallis porta. Proin eu lorem ac ante facilisis sollicitudin a sit amet odio. Ut dapibus vitae leo in rutrum. Maecenas interdum vel nunc at consectetur. Nulla pulvinar iaculis ultricies. Sed in eros sed dolor ultricies vulputate. Quisque quis arcu at augue pellentesque pharetra et sed metus. Nam elit eros, dapibus sed sapien ac, tincidunt pellentesque nibh. Nam aliquam ullamcorper quam, ac venenatis nulla varius non. Praesent tortor ante, finibus ac nulla vitae, aliquet auctor orci. Nulla luctus mauris id egestas venenatis. Nullam vestibulum vestibulum justo, non efficitur lacus lobortis vitae. Nam mollis quis massa vel varius.
+
+        natis vestibulum tellus. Mauris ullamcorper velit quis urna porta vulputate. Nunc sagittis leo nec ipsum vulputate gravida. Nam fringilla lectus nec dui lacinia scelerisque. Nunc tempor, lorem eu consequat lacinia, urna eros pulvinar sem, id dignissim magna arcu nec eros. Vivamus mauris ante, vehicula vel turpis et, ullamcorper semper turpis. Nunc sit amet commodo enim. Pellentesque lacinia tortor faucibus leo scelerisque maximus. Cras dapibus eros ut tristique sollicitudin.</P>
+</section><!-- MAIN SECTION END--
+
+
+
+
