--- a/lab3/index.html
+++ b/lab3/index.html
@@ -65,7 +65,8 @@
         Proin sed elit sit amet nibh efficitur fringilla. In sodales arcu eget tellus convallis porta. Proin eu lorem ac ante facilisis sollicitudin a sit amet odio. Ut dapibus vitae leo in rutrum. Maecenas interdum vel nunc at consectetur. Nulla pulvinar iaculis ultricies. Sed in eros sed dolor ultricies vulputate. Quisque quis arcu at augue pellentesque pharetra et sed metus. Nam elit eros, dapibus sed sapien ac, tincidunt pellentesque nibh. Nam aliquam ullamcorper quam, ac venenatis nulla varius non. Praesent tortor ante, finibus ac nulla vitae, aliquet auctor orci. Nulla luctus mauris id egestas venenatis. Nullam vestibulum vestibulum justo, non efficitur lacus lobortis vitae. Nam mollis quis massa vel varius.
 
         natis vestibulum tellus. Mauris ullamcorper velit quis urna porta vulputate. Nunc sagittis leo nec ipsum vulputate gravida. Nam fringilla lectus nec dui lacinia scelerisque. Nunc tempor, lorem eu consequat lacinia, urna eros pulvinar sem, id dignissim magna arcu nec eros. Vivamus mauris ante, vehicula vel turpis et, ullamcorper semper turpis. Nunc sit amet commodo enim. Pellentesque lacinia tortor faucibus leo scelerisque maximus. Cras dapibus eros ut tristique sollicitudin.</P>
-</section><!-- MAIN SECTION END--
+</section>
+<!-- MAIN SECTION END-->
 
 
 
