--- a/lab3/index.html
+++ b/lab3/index.html
@@ -66,7 +66,54 @@
 
         natis vestibulum tellus. Mauris ullamcorper velit quis urna porta vulputate. Nunc sagittis leo nec ipsum vulputate gravida. Nam fringilla lectus nec dui lacinia scelerisque. Nunc tempor, lorem eu consequat lacinia, urna eros pulvinar sem, id dignissim magna arcu nec eros. Vivamus mauris ante, vehicula vel turpis et, ullamcorper semper turpis. Nunc sit amet commodo enim. Pellentesque lacinia tortor faucibus leo scelerisque maximus. Cras dapibus eros ut tristique sollicitudin.</P>
 </section>
+
 <!-- MAIN SECTION END-->
+
+<!-- SIDEBAR START-->
+<aside>
+
+</aside>
+<!-- SIDEBAR START-->
+
+<aside>
+    <-NEWS START->
+    <article>
+        <h3>Latest News</h3>
+        <h4>Lorem Ipsum Donor</h4>
+        <P>lorem ipsum dolor sit amet, conseetur adipiscing</P>
+    </article>
+    <!--NEWS END-->
+
+    <--EVENTS START-->
+    <article>
+        <h3>Upcoming Events</h3>
+        <h4>Lorem Ipsum Donor</h4>
+        <P>lorem ipsum dolor sit amet, conseetur adipiscing</P>
+        <h4>Lorem Ipsum Donor</h4>
+        <P>lorem ipsum dolor sit amet, conseetur adipiscing</P>
+        </article>
+    <--EVENTS END-->
+</aside>
+<!-- SIDEBAR END-->
+<!--FOOTER START-->
+<footer>
+    <p>(c)20016 Mike Crabb</p>
+</footer>
+<!--FOOTER START-->
+
+<! DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Computing Home Page</title>
+    <link rel="stylesheet" href="assets/CSS/style.CSS">
+</head>
+<body>
+
+
+
+
+
 
 
 
