--- a/lab3/index.html
+++ b/lab3/index.html
@@ -99,7 +99,7 @@
 <footer>
     <p>(c)20016 Mike Crabb</p>
 </footer>
-<!--FOOTER START-->
+<!--FOOTER END-->
 
 <! DOCTYPE html>
 <html lang="en">
@@ -107,6 +107,8 @@
     <meta charset="UTF-8">
     <title>Computing Home Page</title>
     <link rel="stylesheet" href="assets/CSS/style.CSS">
+    <link rel="stylesheet" href="assets/CSS/unsemantic-grid-responsive-tablet.css">
+
 </head>
 <body>
 
