--- a/lab2/index.html
+++ b/lab2/index.html
@@ -111,6 +111,18 @@
         <li><a href="http://www.pintrest.com"><img src="pintrestlogo.png" alt="Pintrest"></a></li>
         <li><a href="http://www.instagram.com"><img src="instagramlogo.png" alt="Instagram"></a></li>
         </ul>
+    <ul>
+
+
+        ul<li><a><text</text>
+
+
+        <li><a href="">text</a></li>
+        <li><a href="">text</a></li>
+        <li><a href="">text</a></li>
+        <li><a href="">text</a></li>
+        <li><a href="">text</a></li>
+    </ul>
 </footer>
 <!--END OF HEADER -->
 </body>
