--- a/lab3/index.html
+++ b/lab3/index.html
@@ -29,7 +29,7 @@
     </header>
 <!-- HEADER END -->
 
-<img src="assets/images/banner.png" alt="Sir Ian Wood Bilding Atrim">
+<img src="assets/images/download.png" alt="Sir Ian Wood Bilding Atrim">
 
 <!-- MAIN START -->
 <main>
@@ -55,7 +55,7 @@
 <!-- MAIN SECTION START-->
 <section>
     <h2>Welcome to The School Computing Science Digital Media</h2>
-    <img src="assets/images/Chrisina Jayne.jpg" alt="Chrisian Jayne">
+    <img src="assets/images/h3.jpg" alt="Chrisian Jayne">
     <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum coDonec venengue semper. Pellentesque magna justo, semper sollicitudin enim a, eleifend varius tellus. Integer suscipit vestibulum nisi, vel finibus sem dictum vel. Cras quis purus scelerisque, porta ex sollicitudin, sodales lorem. Morbi malesuada risus urna, sed accumsan eros convallis et. Nam pretium eget arcu quis cursus. Aliquam blandit est felis, non rutrum elit molestie ut. Sed sit amet est sapien. Donec non mi euismod, ornare nisi eu, consequat lorem. Donec elementum ultrices laoreet. Sed vel lobortis metus, facilisis euismod justo. Mauris hendrerit ex vitae augue convallis venenatis. Ut vitae ultricies elit, vitae mollis mi.
 
         Integer at nisi ac erat lobortis tristique nec ut tortor. Nunc efficitur, justo nec consequat fermentum, magna dui sodales massa, finibus eleifend erat mi eu felis. Praesent vitae metus vel tellus eleifend vulputate. Donec varius, mauris nec tempor convallis, tortor lorem vulputate nisl, non bibendum ipsum felis vitae velit. Mauris venenatis urna vel euismod ullamcorper. In hac habitasse platea dictumst. Donec lorem sem, interdum at ligula id, dignissim faucibus metus. Ut libero felis, egestas ut porttitor lobortis, tincidunt eget sapien. Phasellus eget pellentesque nunc. Fusce quam felis, mollis molestie nisi gravida, convallis scelerisque nibh. Aenean scelerisque, felis dignissim ornare varius, sapien tellus pulvinar ante, a maximus dolor nisl sed ipsum.
@@ -111,6 +111,15 @@
 
 </head>
 <body>
+
+@import "templatecolours.jpg";
+
+body{
+max-width:960px;
+margin-left: auto:
+margin-right: auto:
+}
+
 
 
 
